Initial OOP design
База данных

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "project2_magomedov_М25-555"
+name = "project2_magomedov_M25-555"
 version = "0.1.0"
 description = ""
 authors = [
