--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "prompt (>=0.4.1,<0.5.0)"
+    "prompt (>=0.4.1,<0.5.0)",
+    "prettytable (>=3.16.0,<4.0.0)"
 ]
 
 [tool.poetry]
@@ -16,7 +17,7 @@ packages = [
 ]
  
 [tool.poetry.scripts]
-project = "src.primitive_db.main:main" 
+database = "src.primitive_db.main:main" 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
